--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="line_save">
                 <button class="btn btn_add_gt" onclick="themGiaiTich()">THÊM GIẢI THÍCH</button>
-                <button id="addQuestionBtn" class="btn">LƯU</button>
+                <button id="addQuestionBtn" class="btn" disabled>LƯU</button>
             </div>
             <div class="addGT" id="addGT">
                 <div class="close_sow">
